# kuantorwave

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
core/src/detect/: kw_detect.c
core/src/pcm/: kw_pcm.c  kw_pcm_internal.h
docs/: KuantorWave-Presentation-Speech.docx  KuantorWave-Tutorial.docx  architecture.md
docs/decisions/: 0001-python-binding-mechanism.md
include/: kuantorwave.h
tests/: test_detect.c  test_pcm.c
